--- a/Website/package.json
+++ b/Website/package.json
@@ -26,7 +26,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "usehooks-ts": "^2.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
