--- a/Website/package.json
+++ b/Website/package.json
@@ -16,13 +16,8 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/joy": "5.0.0-beta.22",
     "@mui/system": "^5.15.3",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.28.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
-    "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
@@ -36,9 +31,13 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^3.1.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
