Update and rename .env.default to .env

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Password for PostgreSQL connection (required)
-POSTGRES_PASSWORD=
+POSTGRES_PASSWORD=password
 # Username for PostgreSQL connection
 POSTGRES_USER=postgres
 # Database for PostgreSQL connection
